# message-board

./: .env.example  .gitignore  CLAUDE.md  asset-manifest.json  main.py  package-lock.json  package.json  pyproject.toml  questions.md  readme.md  requirements.txt  space-os-spec.md
api/: app.py  assets.py  auth.py  command_schema.py  dependencies.py  presence_proxy.py  queries.py  user.py
dbschema/: default.gel
docs/: zig-performance-analysis.md
pico/: ascii3x3.py  ascii5x5.py  color.py  connect.py  flash_nuke.uf2  mb3x3.py  mb5x5.py  message-board.py  rgb5x5.py  unicorn7x17.py
queries/: acceptFriendRequest.edgeql  copyGraphicToDraft.edgeql  copyGraphicToGallery.edgeql  deleteBoardWifiProfile.edgeql  deleteDraft.edgeql  deleteFriend.edgeql  deleteFriendRequest.edgeql  deleteGlobalUserBoard.edgeql  deletePixelGraphic.edgeql  deleteRecipientMessage.edgeql  finishDraft.edgeql  inserUserFromLocalProvider.edgeql  insertAvatar.edgeql  insertBoard.edgeql  insertBoardWifiProfile.edgeql  insertFriendRequest.edgeql  insertMessage.edgeql  insertMessageWithBoard.edgeql  insertUserFromGitHubProvider.edgeql  markMessageRead.edgeql  rejectFriendRequest.edgeql  searchUserByUsername.edgeql  selectBoardBySecretKey.edgeql  selectBoardSettingsForDevice.edgeql  selectBoardWifiProfiles.edgeql  selectDraft.edgeql  selectFriendRequests.edgeql  selectFriendRequestsSent.edgeql  selectFriends.edgeql  selectGlobalIdentity.edgeql  selectGlobalUser.edgeql  selectGlobalUserBoard.edgeql  selectLatestMessage.edgeql  selectManyGlobalUserBoards.edgeql  selectMessageForSpacePack.edgeql  (+13 more)
(+110 files in other folders)
