[project]
name = "message-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bleach>=6.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "gel>=3.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "werkzeug>=3.0.0",
    "ably>=2.0.0",
    "cryptography>=46.0.5",
    "onepassword-sdk>=0.4.0",
]
